--- a/P3_Patrouillault_eric/sass/pages/_menu-1.scss
+++ b/P3_Patrouillault_eric/sass/pages/_menu-1.scss
@@ -1,3 +1,4 @@
+/* header menu */
 .menu__img img{
     width: 100%;
     object-fit: contain;
@@ -5,7 +6,7 @@
     
 .menu__restaurants {
     background-color: $colour-quinary;
-    border-radius: 50px;
+    border-radius: 50px 50px 0 0;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -21,52 +22,73 @@
         @include heart;
     }  
 }
-
-.menu__starter {
-    display: flex;
-    flex-direction: column;
-    &.starter__title {
-        border-bottom: 3px solid $colour-tertiary;
-        width: 46px;
-        padding-bottom:  5px;
-        margin-bottom: 15px;
-    }  
-    &.menu__card {
-        @include card;
-        justify-content: space-between;
-        &.txt {
-            display: flex;
-            flex-direction: column;
-            &.name {
-                font-weight: bold;
-            }
-            &.accompaniment {
-            }
-        }
-       
-        &.price {
-            font-weight: bold;
-            display: flex;
-            align-items: flex-end;
-        }
-        &.validate {
-            background-color: $colour-tertiary;
-            color: $colour-septenary;
-            margin: -1rem -5rem -1rem 1rem;
-            width: 4rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition-duration: .5s;
-            i {
-                font-size: 22px;
-                
-            }
-        }
-        &:hover .validate {
-            transform: translate(-100%);
-        }
-    }    
+/* all menus */
+.menu-integral {
+    background-color: $colour-quinary;
 }
+/* starter */
+.starter {
+   
+   
+}
+.title {
+    border-bottom: 3px solid $colour-tertiary;
+    width: 46px;
+    padding-bottom:  5px;
+    margin: 0 0 15px 15px;
+} 
 
-
+.card {
+    @include card;
+    display: flex;
+    flex-wrap: nowrap;
+    &.validate {
+        color: $colour-septenary;
+        margin: 0;
+        padding: 0;
+    }
+    &:hover .validate {
+        justify-content: center;
+        align-items: center;
+        background-color: $colour-tertiary;
+        color: $colour-septenary;
+        border-radius: 0 15px 15px 0;
+        padding: 0;
+        width: 3.5rem; 
+        transform:scalex(1);
+        transition: transform 600ms ease-out 50ms;
+        i {
+             font-size: 22px;
+        }
+    }
+    
+}    
+.txt {
+    width: 100%;
+    display: inline-block;
+    font-family: $font-family-sans-serif;
+    &.name {
+        white-space: nowrap; /*le texte ne revient pas à la ligne*/
+        font-weight: bold;
+        padding-bottom: 0;
+        padding-top: 5px;
+    }
+    &.accompaniment {
+        white-space: nowrap; /*le texte ne revient pas à la ligne*/
+        text-overflow: ellipsis;/*la fin du texte fini par ...*/
+        overflow: hidden;/*coupe le texte si il depasse */
+        padding-top: 0;
+        padding-bottom: 5px;
+    }
+    &:hover {
+        width: 64%;
+    }
+}
+.price {
+    font-weight: bold;
+    display: flex;
+    align-items: flex-end;
+    font-family: $font-family-sans-serif;
+    flex: 1;
+    margin-right: 16px;
+}
