--- a/P3_Patrouillault_eric/sass/components/_list.scss
+++ b/P3_Patrouillault_eric/sass/components/_list.scss
@@ -5,18 +5,10 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    @media screen and (min-width:1024px) {
-        flex-direction: row;
-        column-gap: 80px;
-        align-items: center;
-    }
     &.functionning__step {
         display: flex;
         justify-content: center;
         color: grey;
-        @media screen and (min-width: 1024px) {
-            justify-content: flex-start;
-        }
         &:hover {
             .functionning__btn {
                 background-color:$colour-senary;
@@ -43,8 +35,35 @@
         position: absolute;
         margin-left: 30px;
         font-size: 21px;
-        @media screen and (min-width:1024px) {
-            padding-left: 10px;
+    }
+}
+
+/* Functionning List tablet */
+@media screen and (min-width:768px) and (max-width:991px) {
+    .functionning__list {
+        flex-direction: row;
+        justify-content: space-between;
+        column-gap: 0px;
+        &.functionning__step {
+            justify-content: flex-start;
+            align-items: center;
+            padding-left: 8px;
+        }
+        &.functionning__step i {
+            margin-left: 20px;
+        }
+    }
+}
+
+/* Functionning List desktop */
+@media screen and (min-width:992px) {
+    .functionning__list {
+        flex-direction: row;
+        column-gap: 15px;
+        align-items: center;
+        &.functionning__step {
+            justify-content: flex-start;
+            padding-left: 8px;
         }
     }
 }
@@ -54,14 +73,14 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-    margin: 0 13px 0 0;
     padding: 0;
-    @media screen and (min-width:781px) {
+    @media screen and (min-width:768px) and (max-width:991px) {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        column-gap: 20px;
     }
-    @media screen and (min-width:1024px) {
+    @media screen and (min-width:992px) {
         flex-direction: row;
         flex-shrink: 1;
         justify-content: center;
@@ -72,18 +91,20 @@
         box-shadow: 0px 0px 3px 0px #0000002e;
         cursor: pointer;
         margin: 0 20px 20px 20px;
-        @media screen and (min-width:781px) {
-            margin: 0 20px 20px 0;
+        @media screen and (min-width:768px) and (max-width:991px) {
+            margin: 0  0 20px 0;
+            width: 350px;
+            justify-content: flex-start;
         }
-        @media screen and (min-width:1024px) {
-            width: -moz-available;
+        @media screen and (min-width:992px) {
+            
         }
         img {
             height: 170px;
             width: 100%;
             object-fit: cover;
             border-radius: 18px 18px 0 0;
-            @media screen and (min-width:1024px) {
+            @media screen and (min-width:992px) {
                 flex-direction: row;
                 flex-shrink: 1;
             }
@@ -92,7 +113,8 @@
             color:black;
             padding: 0 0 0 10px;
             margin: 0;
-            @media screen and (min-width:1024px) {
+            box-shadow: none;
+            @media screen and (min-width:992px) {
                 flex-wrap: wrap;
                 justify-content: flex-start;
                 min-width: 150px;
@@ -112,11 +134,11 @@
                 padding: 10px 0 0 275px;
                 color: grey;
                 @include heart;
-                @media screen and (min-width:781px) {
+                @media screen and (min-width:768px) and (max-width:991px) {
                     position: unset;
                     padding: 10px 0 0 30px;
                 }
-                @media screen and (min-width:1024px) {
+                @media screen and (min-width:992px) {
                     position: unset;
                     padding: 10px 0 0 30px;
                 }
