--- a/P3_Patrouillault_eric/sass/layout/_header.scss
+++ b/P3_Patrouillault_eric/sass/layout/_header.scss
@@ -17,3 +17,15 @@
     margin: 20px 0 15px 0;
 }
 
+@media screen and (min-width:992px) {
+    .header__logo {
+        img {
+            height: 60px;
+        }
+    }
+    .header {
+        i {
+            font-size: 30px;
+        }
+    }
+}
