--- a/P3_Patrouillault_eric/sass/pages/_index.scss
+++ b/P3_Patrouillault_eric/sass/pages/_index.scss
@@ -1,4 +1,4 @@
-.search__restaurant {
+.search-and-command {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -10,8 +10,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 40px 25px 40px 25px;
-    @media screen and (min-width:1024px) {
+    margin: 40px 15px;
+    @media screen and (min-width:768px) and (max-width:991px) {
+        align-items: center;
+    }
+    @media screen and (min-width:992px) {
         flex-wrap: wrap;
         flex-direction: row;
         column-gap: 1000px;
@@ -21,7 +24,10 @@
 
 .restaurants__title {
     margin-left: 20px;
-    @media screen and (min-width:1024px) {
+    @media screen and (min-width:768px) and (max-width:991px) {
+        margin-left: 0;
+    }
+    @media screen and (min-width:992px) {
        margin-left: 0;
        display: flex;
        justify-content: center;
@@ -34,5 +40,8 @@
     justify-content: center;
     background-color: $colour-quinary;
     padding-top: 40px;
+    @media screen and (min-width:768px) and (max-width:991px) {
+       align-items: center;
+    }
 }
 
