--- a/P3_Patrouillault_eric/sass/style.css
+++ b/P3_Patrouillault_eric/sass/style.css
@@ -29,7 +29,7 @@ h2 {
 }
 
 h3 {
-  font-size: 19px;
+  font-size: 17px;
 }
 
 @media screen and (min-width: 1024px) {
@@ -76,28 +76,54 @@ h3 {
   margin: 20px 0 15px 0;
 }
 
+@media screen and (min-width: 992px) {
+  .header__logo img {
+    height: 60px;
+  }
+  .header i {
+    font-size: 30px;
+  }
+}
+
 .footer {
   background-color: #272727;
   color: white;
-  padding: 10px 20px;
   font-weight: bold;
-}
-
-@media screen and (min-width: 781px) {
-  .footer {
-    padding-left: 35px;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .footer img {
-  height: 20px;
-  padding-left: 0px;
+  height: 40px;
+  padding: 15px 0 0 20px;
 }
 
-@media screen and (min-width: 1024px) {
-  .footer img {
-    height: 26px;
-  }
+.footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.footer ul i {
+  padding-right: 10px;
+}
+
+.footer ul .fa-hands-helping {
+  font-size: 11px;
 }
 
 .footer.footer__list {
@@ -109,12 +135,85 @@ h3 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-column-gap: 15px;
-          column-gap: 15px;
-  padding: 5px 0 5px 0;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 5px 20px;
 }
 
-/* search restaurant */
+/* tablet */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .footer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer img {
+    height: 50px;
+    padding-top: 20px;
+  }
+  .footer ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 20px 0 40px 0;
+  }
+  .footer ul .fa-hands-helping {
+    font-size: 17px;
+  }
+  .footer ul i {
+    padding: 0;
+  }
+  .footer.footer__list p {
+    margin-left: 10px;
+  }
+}
+
+/* desktop */
+@media screen and (min-width: 992px) {
+  .footer {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer img {
+    height: 40px;
+    margin-top: 10px;
+  }
+  .footer ul {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    padding: 20px 0 30px 0;
+  }
+  .footer ul .fa-hands-helping {
+    font-size: 15px;
+  }
+  .footer ul i {
+    padding-right: 0;
+  }
+  .footer.footer__list p {
+    margin-left: 10px;
+  }
+}
+
+/* button search and command */
+.search-and-command {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  padding: 45px 35px 60px 35px;
+  background-color: #F2F2F2;
+}
+
 .search__btn {
   border: 0;
   -webkit-box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
@@ -127,6 +226,7 @@ h3 {
   padding: 12px 24px;
   color: #fff;
   cursor: pointer;
+  font-weight: bold;
 }
 
 .search__btn:hover {
@@ -155,9 +255,15 @@ h3 {
   width: 100%;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .functionning__btn {
-    padding: 0 40px 0 80px;
+    padding: 0 20px 0 50px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .functionning__btn {
+    padding: 0 40px 0 70px;
   }
 }
 
@@ -202,20 +308,6 @@ h3 {
   list-style: none;
 }
 
-@media screen and (min-width: 1024px) {
-  .functionning__list {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-column-gap: 80px;
-            column-gap: 80px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
 .functionning__list.functionning__step {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -224,14 +316,6 @@ h3 {
       -ms-flex-pack: center;
           justify-content: center;
   color: grey;
-}
-
-@media screen and (min-width: 1024px) {
-  .functionning__list.functionning__step {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-  }
 }
 
 .functionning__list.functionning__step:hover .functionning__btn {
@@ -268,9 +352,51 @@ h3 {
   font-size: 21px;
 }
 
-@media screen and (min-width: 1024px) {
+/* Functionning List tablet */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .functionning__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-column-gap: 0px;
+            column-gap: 0px;
+  }
+  .functionning__list.functionning__step {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-left: 8px;
+  }
   .functionning__list.functionning__step i {
-    padding-left: 10px;
+    margin-left: 20px;
+  }
+}
+
+/* Functionning List desktop */
+@media screen and (min-width: 992px) {
+  .functionning__list {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 15px;
+            column-gap: 15px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .functionning__list.functionning__step {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    padding-left: 8px;
   }
 }
 
@@ -284,11 +410,10 @@ h3 {
       -ms-flex-direction: column;
           flex-direction: column;
   list-style: none;
-  margin: 0 13px 0 0;
   padding: 0;
 }
 
-@media screen and (min-width: 781px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .restaurants__list {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -299,10 +424,12 @@ h3 {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__list {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -325,15 +452,13 @@ h3 {
   margin: 0 20px 20px 20px;
 }
 
-@media screen and (min-width: 781px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .restaurants__list.restaurants__card {
-    margin: 0 20px 20px 0;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .restaurants__list.restaurants__card {
-    width: -moz-available;
+    margin: 0  0 20px 0;
+    width: 350px;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
   }
 }
 
@@ -345,7 +470,7 @@ h3 {
   border-radius: 18px 18px 0 0;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__list.restaurants__card img {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -360,9 +485,11 @@ h3 {
   color: black;
   padding: 0 0 0 10px;
   margin: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__list.restaurants__card.restaurants__txt {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -399,14 +526,14 @@ h3 {
   -webkit-text-fill-color: transparent;
 }
 
-@media screen and (min-width: 781px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
   .restaurants__list.restaurants__card.restaurants__txt.restaurants__card i {
     position: unset;
     padding: 10px 0 0 30px;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 992px) {
   .restaurants__list.restaurants__card.restaurants__txt.restaurants__card i {
     position: unset;
     padding: 10px 0 0 30px;
@@ -484,7 +611,7 @@ h3 {
   }
 }
 
-.search__restaurant {
+.search-and-command {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -508,10 +635,18 @@ h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 40px 25px 40px 25px;
+  margin: 40px 15px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .functionning {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 992px) {
   .functionning {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -531,7 +666,13 @@ h3 {
   margin-left: 20px;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .restaurants__title {
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 992px) {
   .restaurants__title {
     margin-left: 0;
     display: -webkit-box;
@@ -558,6 +699,14 @@ h3 {
   padding-top: 40px;
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .cards-container {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 /* header menu */
 .menu__img img {
   width: 100%;
@@ -577,7 +726,7 @@ h3 {
           flex-direction: column;
   position: relative;
   margin-top: -40px;
-  padding: 30px 20px 40px 20px;
+  padding: 30px 20px 15px 20px;
 }
 
 .menu__restaurants h1 {
@@ -598,71 +747,101 @@ h3 {
   -webkit-text-fill-color: transparent;
 }
 
-/* all menus */
+/* all menu */
 .menu-integral {
   background-color: #F2F2F2;
+  padding-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-/* starter */
+.part-menu {
+  padding-bottom: 25px;
+}
+
 .title {
   border-bottom: 3px solid #99E2D0;
   width: 46px;
   padding-bottom: 5px;
-  margin: 0 0 15px 15px;
+  margin: 0 0 15px 18px;
 }
 
 .card {
   background-color: white;
   border-radius: 15px;
   cursor: pointer;
-  padding: 0 0 0 7px;
-  margin: 5px 9px;
+  padding-left: 10px;
+  margin: 5px 9px 13px 9px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+  -webkit-transition: 1s, -webkit-transform;
+  transition: 1s, -webkit-transform;
+  transition: transform, 1s;
+  transition: transform, 1s, -webkit-transform;
+  max-width: 400px;
 }
 
 .card.validate {
   color: white;
-  margin: 0;
-  padding: 0;
-}
-
-.card:hover .validate {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  border-radius: 0 15px 15px 0;
+  opacity: 0;
+  width: 1px;
+}
+
+.card.validate i {
+  font-size: 1px;
+}
+
+.card:hover .validate {
   background-color: #99E2D0;
   color: white;
-  border-radius: 0 15px 15px 0;
-  padding: 0;
-  width: 3.5rem;
-  -webkit-transform: scalex(1);
-          transform: scalex(1);
-  -webkit-transition: -webkit-transform 600ms ease-out 50ms;
-  transition: -webkit-transform 600ms ease-out 50ms;
-  transition: transform 600ms ease-out 50ms;
-  transition: transform 600ms ease-out 50ms, -webkit-transform 600ms ease-out 50ms;
+  width: 55px;
+  opacity: 1;
 }
 
 .card:hover .validate i {
   font-size: 22px;
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
 }
 
 .txt {
-  width: 100%;
+  width: 97%;
   display: inline-block;
   font-family: "Roboto-Medium", sans-serif;
+  padding-top: 10px;
 }
 
 .txt.name {
   white-space: nowrap;
   /*le texte ne revient pas à la ligne*/
+  text-overflow: ellipsis;
+  /*la fin du texte fini par ...*/
+  overflow: hidden;
+  /*coupe le texte si il depasse */
   font-weight: bold;
   padding-bottom: 0;
   padding-top: 5px;
@@ -677,25 +856,155 @@ h3 {
   /*coupe le texte si il depasse */
   padding-top: 0;
   padding-bottom: 5px;
+  font-size: 15px;
 }
 
 .txt:hover {
-  width: 64%;
+  width: 65%;
 }
 
 .price {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-weight: bold;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
   font-family: "Roboto-Medium", sans-serif;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  margin-right: 16px;
+  padding: 35px 0 0 0;
+}
+
+/* button command */
+.search-and-command {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 35px;
+}
+
+.search-and-command.command-menu {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.search-and-command.search__btn {
+  padding: 0 50px;
+  margin: 0;
+}
+
+/* animation card */
+.card-1 {
+  -webkit-animation: fadein 1s;
+          animation: fadein 1s;
+}
+
+.card-2 {
+  -webkit-animation: fadein 2s;
+          animation: fadein 2s;
+}
+
+.card-3 {
+  -webkit-animation: fadein 3s;
+          animation: fadein 3s;
+}
+
+.card-4 {
+  -webkit-animation: fadein 4s;
+          animation: fadein 4s;
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(40px);
+            transform: translateY(40px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .menu__img img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 350px;
+  }
+  .menu-integral {
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .menu__restaurants {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 20px;
+  }
+  .menu__restaurants h1 {
+    margin: 0;
+    font-size: 40px;
+  }
+  .menu__restaurants #heart-menu {
+    position: initial;
+    margin-left: 70px;
+    font-size: 40px;
+  }
+  .card {
+    max-width: 325px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .menu__img img {
+    -o-object-fit: cover;
+       object-fit: cover;
+    height: 325px;
+  }
+  .menu-integral {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .card {
+    max-width: 350px;
+  }
 }
 
 /* Ordre d'import
