--- a/P3_Patrouillault_eric/sass/utils/_mixins.scss
+++ b/P3_Patrouillault_eric/sass/utils/_mixins.scss
@@ -15,12 +15,32 @@
 }
 
 /* page menu- */
+@mixin name-restaurant {
+    background-color: $colour-quinary;
+    border-radius: 50px 50px 0 0;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-top: -40px;
+    padding: 30px 20px 15px 20px;
+}
+
 @mixin card {
     background-color: $colour-septenary;
     border-radius: 15px;
     cursor: pointer;
-    padding: 0 0 0 7px;
-    margin: 5px 9px;
+    padding-left:10px;
+    margin: 5px 9px 13px 9px;
+    display: flex;
+    flex-wrap: nowrap;
+    transition: transform, 1s;
 }
 
-
+@mixin check {
+    color: $colour-septenary;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    border-radius: 0 15px 15px 0;
+}
