--- a/P3_Patrouillault_eric/sass/layout/_footer.scss
+++ b/P3_Patrouillault_eric/sass/layout/_footer.scss
@@ -78,6 +78,7 @@
         &.footer__list {
             p {
                 margin-left: 10px;
+                color: $colour-quinary;
             }
         }
    }
