--- a/P3_Patrouillault_eric/sass/pages/_menu.scss
+++ b/P3_Patrouillault_eric/sass/pages/_menu.scss
@@ -136,6 +136,7 @@
     }
 }
 
+/*desktop */
 @media screen and (min-width:992px) {
     .menu__img {
         img {
@@ -172,6 +173,7 @@
 
 }
 
+/* tablet */
 @media screen and (min-width:768px) and (max-width:991px) {
     .menu__img {
         img {
