--- a/P3_Patrouillault_eric/sass/components/_loading-spinner.scss
+++ b/P3_Patrouillault_eric/sass/components/_loading-spinner.scss
@@ -1,34 +1,42 @@
 /* loading spinner */
 .loader{
-    position: absolute;
-    left: 53%;
+    position: fixed;
+    left: 50%;
+    margin-left: -3em;
     top: 50%;
     z-index: 1;
     width: 100px;
     height: 100px;
-    margin: -75px 0 0 -75px;
-    border: 16px solid $colour-primary;
+    border: 14px solid $colour-primary;
     border-radius: 50%;
-    border-top: 16px solid $colour-secondary;
+    border-top: 14px solid $colour-secondary;
+    border-bottom: 14px solid $colour-tertiary;
     animation: spin 2s linear 2;
     animation-fill-mode: forwards;
-    animation-timing-function: 4s;
 }
-  
+
 @keyframes spin {
-    0% {
-         transform: rotate(0deg); 
-         opacity: 1;
-        }
-    99% {
-        transform: rotate(354deg); 
-        opacity: 1;
-        }
-    100% { 
-        transform: rotate(360deg); 
-        opacity: 0;
-        
-    }
+    0% {transform: rotate(0deg); opacity: 1;}
+    99% {transform: rotate(354deg); opacity: 1;}
+    100% {transform: rotate(360deg); opacity: 0;}
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: hsla(0, 0%, 0%, 0.5);
+    z-index: 1;
+    animation: overlay__loading 4s ;
+    animation-fill-mode: forwards;
+}
+
+@keyframes overlay__loading {
+    0% {opacity: 1;}
+    99% {opacity: 1;}
+    100% {opacity: 0; }
+} 
 
 
