--- a/P3_Patrouillault_eric/sass/style.scss
+++ b/P3_Patrouillault_eric/sass/style.scss
@@ -9,11 +9,11 @@
 
 @import "./components/btn";
 @import "./components/input";
-@import "./components/list";
+@import "./components/list_functionning";
+@import "./components/list_restaurants";
 @import "./components/loading-spinner";
 
-@import "./pages/index";
-@import "./pages/menu-1";
+@import "./pages/menu";
 
 
 
