--- a/P3_Patrouillault_eric/sass/layout/_header.scss
+++ b/P3_Patrouillault_eric/sass/layout/_header.scss
@@ -20,13 +20,9 @@
 /* desktop */
 @media screen and (min-width:992px) {
     .header__logo {
-        img {
-            height: 60px;
-        }
+        img {height: 60px;}
     }
     .header {
-        i {
-            font-size: 30px;
-        }
+        i {font-size: 30px;}
     }
 }
