--- a/P3_Patrouillault_eric/sass/layout/_footer.scss
+++ b/P3_Patrouillault_eric/sass/layout/_footer.scss
@@ -23,6 +23,10 @@
             display: flex;
             flex-direction: row;
             padding: 5px 20px;
+            p {
+                color: white;
+            }
+            
         }
     }
 }
