--- a/P3_Patrouillault_eric/sass/style.css
+++ b/P3_Patrouillault_eric/sass/style.css
@@ -148,6 +148,10 @@ h3 {
   padding: 5px 20px;
 }
 
+.footer.footer__list.footer__txt p {
+  color: white;
+}
+
 /* tablet */
 @media screen and (min-width: 768px) and (max-width: 991px) {
   .footer {
