--- a/P3_Patrouillault_eric/sass/components/_btn.scss
+++ b/P3_Patrouillault_eric/sass/components/_btn.scss
@@ -3,8 +3,13 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    align-items: center;
     padding: 45px 35px 60px 35px;
     background-color: $colour-quinary;
+    @media screen and (min-width:768px) and (max-width:991px) {
+        padding: 20px 35px 60px 35px;
+        
+    }
 }
 
 .search__btn {
@@ -13,12 +18,18 @@
     border-radius: 100px;
     height:50px;
     margin: 30px 40px 0 40px;
-    padding: 12px 24px;
+    padding: 12px 17px;
     color: #fff;
     cursor: pointer;
     font-weight: bold;
     &:hover {
         background: linear-gradient( $colour-primary,$colour-secondary);
+    }
+    @media screen and (min-width:768px) and (max-width:991px) {
+        padding: 12px 35px;
+    }
+    @media screen and (min-width:992px) {
+        padding: 12px 35px;
     }
 }
 
@@ -38,7 +49,6 @@
     }
     @media screen and (min-width:992px) {
         padding: 0 40px 0 70px;
-
     }
 }  
 
