--- a/P3_Patrouillault_eric/sass/pages/_menu.scss
+++ b/P3_Patrouillault_eric/sass/pages/_menu.scss
@@ -105,6 +105,7 @@
     &.to-left:hover:after{
     left:0;
     }
+    /*animation check */
     &:hover .validate {
         background-color: $colour-tertiary;
         width: 55px;
