--- a/P3_Patrouillault_eric/sass/components/_list_restaurants.scss
+++ b/P3_Patrouillault_eric/sass/components/_list_restaurants.scss
@@ -101,7 +101,8 @@
     justify-content: center;
     &.restaurants__card {
         width: 350px;
-        img {width: 350px;}
+        img
+         {width: 350px;}
         &.restaurants__txt {
             flex-wrap: wrap;
             justify-content: flex-start;
